--- a/src/Hero.css
+++ b/src/Hero.css
@@ -42,41 +42,6 @@ header .button {
     margin-top: 2em;
 }
 
-#see-projects {
-    justify-self: flex-end;
+header .arrow-button {
     margin-top: 12em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.2em;
-}
-
-#arrow {
-    --stroke-width: 2px;
-    --stem: 1.6em;
-    --wings: 0.7em;
-    background-color: white;
-    width: var(--stroke-width);
-    height: var(--stem);
-    position: relative;
-    border-radius: 2px 2px 0 0;
-}
-
-#arrow::before,
-#arrow::after {
-    content: '';
-    display: block;
-    transform-origin: bottom right;
-    height: var(--stroke-width);
-    width: var(--wings);
-    background-color: white;
-    position: absolute;
-    right: 1px;
-    border-radius: 2px 0 0 2px;
-    bottom: -2px;
-    transform: rotate(45deg);
-}
-
-#arrow::after {
-    transform: rotate(135deg) translateY(var(--stroke-width));
 }
