--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,12 +1,30 @@
 #projects {
-    height: 100vh;
-    padding-top: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#projects h1 {
-    font-weight: 400;
-    text-decoration: underline;
-    text-align: center;
-    /* font-size: 2rem; */
-    font-size: 50px;
+#projects .grid {
+    box-sizing: border-box;
+    display: grid;
+    max-width: 75em;
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 2.4em;
+    row-gap: 2.8em;
+    justify-content: center;
+    padding: 2em;
+    padding-top: 2.6em;
+}
+
+@media screen and (max-width: 1000px) {
+    #projects .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #projects .grid {
+        grid-template-columns: 1fr;
+    }
 }
