--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 
     color: white;
     font-size: 17px;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -25,14 +26,14 @@ a {
     color: white;
 }
 
-.button {
-    background-color: var(--color-darkblue);
-    padding: 0.8em 2.4em;
-    font-size: 1.4rem;
-    text-decoration: none;
-    border-radius: 0.4rem;
+section > h1 {
+    font-weight: 400;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 3rem;
 }
 
-.button.primary {
-    background-color: var(--color-pastelblue);
+section {
+    padding-top: 2.4em;
+    padding-bottom: 6em;
 }
