--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,12 +1,11 @@
 footer {
-    background-color: white;
+    background-color: #002533;
     display: flex;
     justify-content: center;
-    padding: 7em 0;
+    padding: 5em 0;
     margin-top: 5em;
 }
 
 footer a {
-    color: black;
     font-weight: 600;
 }
