--- a/src/Images.css
+++ b/src/Images.css
@@ -1,3 +1,16 @@
+.other-images .image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: stretch;
+    gap: 1em;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 .other-images img {
     cursor: pointer;
     object-fit: contain;
@@ -25,11 +38,7 @@
 
 .other-images {
     height: 6em;
-    display: flex;
-    align-items: stretch;
-    gap: 1em;
     margin-top: 1em;
-    overflow-x: hidden;
     position: relative;
 }
 
@@ -40,16 +49,35 @@
     bottom: 0;
     z-index: 1;
     cursor: pointer;
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.scroll-button img {
+    width: 1.4em;
+    padding: 0 0.4em;
+}
+
+.scroll-button.show {
+    opacity: 1;
+    pointer-events: initial;
 }
 
 .scroll-button.previous {
     left: 0;
-    /* background: linear-gradient(90deg, var(--color-darkblue), transparent); */
-    background-color: red;
+    background: linear-gradient(90deg, var(--color-darkblue), transparent);
 }
 
 .scroll-button.next {
     right: 0;
-    background-color: red;
-    /* background: linear-gradient(-90deg, var(--color-darkblue), transparent); */
+    background: linear-gradient(-90deg, var(--color-darkblue), transparent);
+    justify-content: flex-end;
+}
+.scroll-button.next img {
+    transform: scaleX(-1);
 }
