--- a/src/ProjectDetails.css
+++ b/src/ProjectDetails.css
@@ -6,6 +6,7 @@
     right: 0;
     bottom: 0;
     transition: transform 0.2s ease-in-out;
+    transition-delay: 0.1s;
     transform: translateX(-100vw);
     z-index: 1;
     padding: 10em;
