Added download brand guide button, improved user experience

--- a/src/Button.css
+++ b/src/Button.css
@@ -1,7 +1,14 @@
 .button {
+    display: block;
+    text-align: center;
     background-color: var(--color-pastelblue);
     padding: 0.8em 2.4em;
     font-size: 1.4rem;
     text-decoration: none;
     border-radius: 0.4rem;
+    font-weight: 500;
+}
+
+.button.small-text {
+    font-size: 1rem;
 }
